# CV-Project

./: .gitignore  LICENSE  README.md  Schematic_CV_Team.drawio  dataset.dvc  pyproject.toml  requirements.txt  requirements_autoML.txt  Инструкция для разметки данных.docx  Расчеты по вычислительным ресурсам.xlsx
.dvc/: config
dataset/coco_dataset/: coco.yaml
scripts/: example_yolo.py  pull_artifacts.py  push_artifacts.py
src/: Experiments.ipynb  LightAutoML_TabularCVAutoML_with_aug.csv  coco_dataset_clearing.ipynb  lama_experiment.ipynb  yolo_test.ipynb  yolo_test2.ipynb  yolo_train_and_predict.ipynb  yolo_train_and_predict_one.ipynb
src/cache_CV/: 452519526_m1060268429_1469756189_1523057915m374330606_m201296073_m2106168314_1780526088.pkl
